Added missing parameter in addEventListener, now works on Firefox

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Even that your pity is enough to cure me.
 				};
 				document.querySelector("#trigger").onclick = text2color;
 				text2color();
-			});
+			}, false);
 		</script>
 	</body>
 </html>
