Added a little description on the HTML page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		</style>
 	</head>
 	<body>
+	    <p><strong>Chromaconator</strong> turns 26 latin alphabet characters (a-z) into "chromacons".<br />
+	    <small>Inspired by the research <a href="http://www.colour-journal.org/2010/5/10/10510article.htm">A Colour Alphabet and the Limits of Colour Coding</a></small>.</p>
+	    
+	    <p>Project page at <a href="https://github.com/mieky/chromaconator-js">github</a></p>
+	    
 		<textarea id="input" rows="15" cols="80" style="font-family: monospace">
 O, for my sake do you with Fortune chide,
 The guilty goddess of my harmful deeds,
